--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,63 @@ body {
 .settings-list li:hover::after {
   width: 100%;
 }
+
+
+.text-editor{
+  height: auto;
+}
+
+.personalinfo{
+  position: relative;
+}
+.blur-body{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+.blur-body button{
+  z-index: 1000;
+  padding: 10px;
+}
+.edit-btn{
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  outline: none;
+  background-color: #3498db37;
+  border-radius: 5px;
+  transition: all .25s ease-in-out;
+}
+.edit-btn:hover{
+  background-color: #3498db;
+  color: white;
+}
+
+.upload-icon{
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000072;
+  color: black;
+  transition: all .25s ease-in-out;
+}
+.upload-icon:hover{
+  color: white;
+  background-color: #000000e2;
+}
