--- a/src/Assets/Css/Sidenav.css
+++ b/src/Assets/Css/Sidenav.css
@@ -73,6 +73,62 @@
     font-family: Arial, Helvetica, sans-serif
 }
 
+@media (max-width: 767px) {
+    .toggler {
+        position: absolute;
+        font-size: 0;
+        width: 50px;
+        height: 50px;
+        top: 10px;
+        right: -50px;
+    }
+
+    .sidenav-inside .toggler::after {
+        content: "";
+        position: absolute;
+        font-size: 0;
+        width: 80%;
+        height: 5px;
+        background-color: black;
+        top: 50%;
+        left: 10px;
+        transform: rotate(-270deg);
+        transition: all .34s ease-in-out;
+
+    }
+
+    .sidenav-inside .toggler::before {
+        content: "";
+        position: absolute;
+        font-size: 0;
+        width: 80%;
+        height: 5px;
+        background-color: black;
+        top: 50%;
+        left: 3px;
+        transform: rotate(270deg);
+        transition: all .34s ease-in-out;
+
+    }
+
+    .sidenav-inside.open .toggler::after {
+        content: "";
+        left: 5px;
+        transform: rotate(45deg);
+
+    }
+
+    .sidenav-inside.open .toggler::before {
+        content: "";
+        left: 5px;
+        transform: rotate(-45deg);
+
+    }
+
+
+
+}
+
 .avater {
     height: 7rem;
     width: 7rem;
